Cloud_portfolio_3/ingress-controller/apache-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: apache-ingress
  namespace: apache-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /apache1
        pathType: Prefix
        backend:
          service:
            name: apache-service-1
            port:
              number: 80
      - path: /apache2
        pathType: Prefix
        backend:
          service:
            name: apache-service-2
            port:
              number: 80
